myhome/src/objects/merchandise__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_inventory__c</fullName>
        <inlineHelpText>only inventory number</inlineHelpText>
        <label>Total inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>price__c</fullName>
        <inlineHelpText>Enter price in US dollars only</inlineHelpText>
        <label>price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>merchandise</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Total_inventory__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>merchandise Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>merchandises</pluralLabel>
    <recordTypes>
        <fullName>parent</fullName>
        <active>true</active>
        <label>parent</label>
    </recordTypes>
    <recordTypes>
        <fullName>skillfeed</fullName>
        <active>true</active>
        <label>skillfeed</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>